UI with functionality

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
             <button id="Scissors" class="buttons">SCISSORS
             </button>
         </div>
-        <div class="results">
-            <p> RESULTS</p>
+        <div id="results">
         </div>
         <div class="scores">
             <p data-box="player" class="Player box"> 0</p>
